# compound

./: LICENSE  README.md  pyproject.toml
src/compound/: __init__.py  __main__.py  calculator.py  charts.py  cli.py  utils.py
src/compound/formatters/: __init__.py  csv_fmt.py  json_fmt.py  plain_fmt.py  rich_fmt.py
